--- a/mobile/css/style.css
+++ b/mobile/css/style.css
@@ -2,7 +2,7 @@
  * @Author: Alex chenzeyongjsj@163.com 
  * @Date: 2018-02-03 13:54:59 
  * @Last Modified by: Alex chenzeyongjsj@163.com
- * @Last Modified time: 2018-02-07 14:37:46
+ * @Last Modified time: 2018-02-24 17:13:11
  */
 /* base css start */
 html,
@@ -443,70 +443,65 @@ body {
   border-radius: 0.1rem;
   margin-top: 0.3rem;
 }
-#info .wrapper::after {
+.wrapper .load-more {
+  width: 100%;
+  height: 1.5rem;
+  border-radius: 0.15rem;
+  background: #e6e6e6;
+  margin-bottom: 1.5rem;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+.wrapper .load-more:active {
+  background: #d74b4f;
+}
+.wrapper .load-more:active span {
+  color: #fff;
+}
+.wrapper .load-more span {
+  color: #666;
+  font-size: 0.6rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.1rem;
+}
+#info .details {
+  width: 100%;
+  padding-top: 1.9rem;
+  margin-bottom: 1.25rem;
+}
+#info .details .detail-header {
+  margin-bottom: 0.8rem;
+  min-height: 1.4rem;
+  position: relative;
+}
+#info .details .detail-header::after {
   content: "";
   display: block;
   visibility: hidden;
   clear: both;
 }
-#info .details {
-  width: 1200px;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  background: #fff;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-}
-#info .details .detail-header {
-  padding-bottom: 30px;
-  margin-bottom: 30px;
-  border-bottom: 1px solid #7f7f7f;
-}
 #info .details .detail-header .title {
-  font-size: 22px;
-  letter-spacing: 2px;
-  margin-bottom: 14px;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  max-width: 13rem;
 }
-#info .details .detail-header .collection-info {
-  font-size: 14px;
-  color: #666;
-}
-#info .details .detail-header .collection-info .state {
-  padding: 3px 10px;
-  background: #d74b4f;
+#info .details .detail-header .state {
+  display: block;
+  font-size: 0.45rem;
+  padding: 0.1rem 0.3rem;
   color: #fff;
-  border-radius: 3px;
-  margin-left: 5px;
+  border-radius: 0.1rem;
+  margin-top: 0.24rem;
+  background: #d74b4f;
 }
 #info .details .detail-body {
   width: 100%;
   text-align: center;
-  padding-bottom: 40px;
-  border-bottom: 1px solid #7f7f7f;
 }
 #info .details .detail-body .detail-img {
+  display: block;
   max-width: 100%;
-  margin-bottom: 20px;
-}
-#info .details .detail-body .body-title {
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  width: 850px;
-  margin: 0 auto;
-  margin-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #7f7f7f;
-  font-size: 20px;
+  margin-bottom: 0.75rem;
 }
 #info .details .detail-body .collection-introduce {
   -webkit-transition: all 0.3s;
@@ -514,7 +509,7 @@ body {
   -ms-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
-  width: 850px;
+  width: 100%;
   margin: 0 auto;
   text-align: left;
   font-size: 14px;
@@ -534,133 +529,80 @@ body {
   color: #666;
   line-height: 24px;
 }
-#info .details .detail-link {
+#info .details .detail-info {
   width: 100%;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  text-align: center;
+  padding: 0.65rem;
+  background: #fff;
+  border-radius: 0.15rem;
+  -webkit-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  -ms-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  -o-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  margin-bottom: 0.75rem;
 }
-#info .details .detail-link .link-download {
-  display: inline-block;
-  padding: 8px 28px;
-  font-size: 14px;
-  color: #fff;
-  background: #d74b4f;
-  border-radius: 3px;
-}
-#info .details .pages {
-  width: 100%;
-  border-top: 1px solid #7f7f7f;
-}
-#info .details .pages::after {
+#info .details .detail-info > ul::after {
   content: "";
   display: block;
   visibility: hidden;
   clear: both;
 }
-#info .details .pages a:hover span {
+#info .details .detail-info > ul li {
+  width: 7.45rem;
+  height: 1.15rem;
+  border-bottom: 1px solid #e6e6e6;
+}
+#info .details .detail-info > ul li span {
+  display: block;
+  font-size: 0.6rem;
+  line-height: 1.15rem;
+  color: #959595;
+}
+#info .details .detail-info .detail-title {
+  text-align: center;
+  border-bottom: 1px solid #e6e6e6;
+  margin-bottom: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+#info .details .detail-info .detail-title p {
+  letter-spacing: 0.1rem;
+  font-size: 1rem;
+}
+#info .details .detail-info .collection-introduce span,
+#info .details .detail-info .collection-introduce p,
+#info .details .detail-info .collection-introduce div,
+#info .details .detail-info .collection-introduce li,
+#info .details .detail-info .collection-introduce dt,
+#info .details .detail-info .collection-introduce dd,
+#info .details .detail-info .collection-introduce i,
+#info .details .detail-info .collection-introduce b {
+  font-size: 0.6rem;
+  color: #959595;
+  line-height: 1.15rem;
+}
+#info #borrow {
+  padding: 0.65rem;
+  background: #fff;
+  border-radius: 0.15rem;
+}
+#info #borrow .borrow-title {
+  text-align: center;
+  margin-bottom: 0.65rem;
+}
+#info #borrow .borrow-title p {
+  font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
   color: #d74b4f;
 }
-#info .details .pages a span {
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-  font-size: 14px;
-  color: #666;
-  line-height: 56px;
+#info #borrow .el-form-item__label {
+  white-space: nowrap;
+  font-size: 0.7rem;
+  line-height: 1.35rem;
+  padding-right: 0.65rem;
 }
-#info .other {
-  width: 260px;
-  background: #fff;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-#info .other .switch {
-  width: 100%;
-  height: 58px;
-  border-bottom: 1px solid #7f7f7f;
-  position: relative;
-}
-#info .other .switch span {
-  width: 50%;
-  text-align: center;
-  padding: 16px 0;
-  font-size: 16px;
-  cursor: pointer;
-  background: #fff;
-  border-top: 3px solid transparent;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-#info .other .switch .line {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 1px;
-  background: #7f7f7f;
-  height: 58px;
-}
-#info .other .switch .span-active {
-  height: 58px;
-  border-top: 3px solid #d74b4f;
-}
-#info .other .other-container {
-  width: 100%;
-  padding: 0 10px;
-}
-#info .other .other-container .hot-container::after {
-  content: "";
-  display: block;
-  visibility: hidden;
-  clear: both;
-}
-#info .other .other-container .hot-container ul {
-  margin-top: 30px;
-}
-#info .other .other-container .hot-container ul::after {
-  content: "";
-  display: block;
-  visibility: hidden;
-  clear: both;
-}
-#info .other .other-container .hot-container ul li {
-  width: 115px;
-  margin-bottom: 10px;
-  overflow: hidden;
-}
-#info .other .other-container .hot-container ul li a img {
-  display: block;
-  width: 100%;
-}
-#info .other .other-container .hot-refesh {
-  width: 100%;
-  text-align: center;
-  margin: 20px 0 30px;
-}
-#info .other .other-container .hot-refesh span {
-  display: inline-block;
-  padding: 8px 10px;
-  background: #808080;
-  border-radius: 3px;
-  color: #fff;
-  cursor: pointer;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-#info .other .other-container .hot-refesh span:hover {
-  background: #d74b4f;
+#info #borrow .el-form-item {
+  margin-bottom: 0.75rem;
 }
 #search .header {
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
