--- a/mobile/css/style.less
+++ b/mobile/css/style.less
@@ -2,7 +2,7 @@
  * @Author: Alex chenzeyongjsj@163.com 
  * @Date: 2018-02-03 13:54:59 
  * @Last Modified by: Alex chenzeyongjsj@163.com
- * @Last Modified time: 2018-02-07 14:37:46
+ * @Last Modified time: 2018-02-24 17:13:11
  */
 
 
@@ -430,66 +430,67 @@ body {
             }
         }
     }
+    .load-more {
+        width: 100%;
+        height: 1.5rem;
+        border-radius: 0.15rem;
+        background: #e6e6e6;
+        margin-bottom: 1.5rem;
+        margin-top: 0.5rem;
+        text-align: center;
+        &:active {
+            background: @text-hover;
+            span {
+                color: #fff;
+            }
+        }
+        span {
+            color: @text-color;
+            font-size: 0.6rem;
+            line-height: 1.5rem;
+            letter-spacing: 0.1rem;
+        }
+    }
 }
 
 #info {
-    .wrapper {
-        &::after {
-            .clear;
-        }
-    }
     .details {
-        width: 1200px;
-        .transi;
-        background: #fff;
-        -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        padding: 20px;
+        width: 100%;
+        padding-top: 1.9rem;
+        margin-bottom: 1.25rem;
         .detail-header {
-            padding-bottom: 30px;
-            margin-bottom: 30px;
-            border-bottom: 1px solid @border-color;
-            .title {
-                font-size: 22px;
-                letter-spacing: 2px;
-                margin-bottom: 14px;
+            margin-bottom: 0.8rem;
+            min-height: 1.4rem;
+            position: relative;
+            &::after {
+                .clear;
             }
-            .collection-info {
-                font-size: 14px;
-                color: @text-color;
-                .state {
-                    padding: 3px 10px;
-                    background: @text-hover;
-                    color: #fff;
-                    border-radius: 3px;
-                    margin-left: 5px;
-                }
+            .title {
+                font-size: 1rem;
+                letter-spacing: 0.1rem;
+                max-width: 13rem;
+            }
+            .state {
+                display: block;
+                font-size: 0.45rem;
+                padding: 0.1rem 0.3rem;
+                color: #fff;
+                border-radius: 0.1rem;
+                margin-top: 0.24rem;
+                background: @text-hover;
             }
         }
         .detail-body {
             width: 100%;
             text-align: center;
-            padding-bottom: 40px;
-            border-bottom: 1px solid @border-color;
             .detail-img {
+                display: block;
                 max-width: 100%;
-                margin-bottom: 20px;
-            }
-            .body-title {
-                .transi;
-                width: 850px;
-                margin: 0 auto;
-                margin-top: 20px;
-                padding-bottom: 20px;
-                border-bottom: 1px solid @border-color;
-                font-size: 20px;
+                margin-bottom: 0.75rem;
             }
             .collection-introduce {
                 .transi;
-                width: 850px;
+                width: 100%;
                 margin: 0 auto;
                 text-align: left;
                 font-size: 14px;
@@ -510,120 +511,81 @@ body {
                 }
             }
         }
-        .detail-link {
+        .detail-info {
             width: 100%;
-            padding-top: 30px;
-            padding-bottom: 30px;
-            text-align: center;
-            .link-download {
-                display: inline-block;
-                padding: 8px 28px;
-                font-size: 14px;
-                color: #fff;
-                background: @text-hover;
-                border-radius: 3px;
-            }
-        }
-        .pages {
-            width: 100%;
-            border-top: 1px solid @border-color;
-            &::after {
-                .clear;
-            }
-            a {
-                &:hover {
+            padding: 0.65rem;
+            background: #fff;
+            border-radius: 0.15rem;
+            -webkit-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+            -moz-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+            -ms-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+            -o-box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+            margin-bottom: 0.75rem;
+            >ul {
+                &::after {
+                    .clear;
+                }
+                li {
+                    width: 7.45rem;
+                    height: 1.15rem;
+                    border-bottom: 1px solid #e6e6e6;
                     span {
-                        color: @text-hover;
+                        display: block;
+                        font-size: 0.6rem;
+                        line-height: 1.15rem;
+                        color: #959595;
                     }
                 }
-                span {
-                    .transi;
-                    font-size: 14px;
-                    color: @text-color;
-                    line-height: 56px;
+            }
+            .detail-title {
+                text-align: center;
+                border-bottom: 1px solid #e6e6e6;
+                margin-bottom: 0.75rem;
+                padding-bottom: 0.75rem;
+                p {
+                    letter-spacing: 0.1rem;
+                    font-size: 1rem;
+                }
+            }
+            .collection-introduce {
+                span,
+                p,
+                div,
+                li,
+                dt,
+                dd,
+                i,
+                b {
+                    font-size: 0.6rem;
+                    color: #959595;
+                    line-height: 1.15rem;
                 }
             }
         }
     }
-    .other {
-        width: 260px;
+    #borrow {
+        padding: 0.65rem;
         background: #fff;
-        -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        -ms-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        .switch {
-            width: 100%;
-            height: 58px;
-            border-bottom: 1px solid @border-color;
-            position: relative;
-            span {
-                width: 50%;
-                text-align: center;
-                padding: 16px 0;
-                font-size: 16px;
-                cursor: pointer;
-                background: #fff;
-                border-top: 3px solid transparent;
-                .transi;
-            }
-            .line {
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 50%;
-                width: 1px;
-                background: @border-color;
-                height: 58px;
-            }
-            .span-active {
-                height: 58px;
-                border-top: 3px solid @text-hover;
+        border-radius: 0.15rem;
+        .borrow-title {
+            text-align: center;
+            margin-bottom: 0.65rem;
+            p {
+                font-size: 0.8rem;
+                letter-spacing: 0.1rem;
+                font-weight: 600;
+                color: @text-hover;
             }
         }
-        .other-container {
-            width: 100%;
-            padding: 0 10px;
-            .hot-container {
-                &::after {
-                    .clear;
-                }
-                ul {
-                    margin-top: 30px;
-                    &::after {
-                        .clear;
-                    }
-                    li {
-                        width: 115px;
-                        margin-bottom: 10px;
-                        overflow: hidden;
-                        a {
-                            img {
-                                display: block;
-                                width: 100%;
-                            }
-                        }
-                    }
-                }
-            }
-            .hot-refesh {
-                width: 100%;
-                text-align: center;
-                margin: 20px 0 30px;
-                span {
-                    display: inline-block;
-                    padding: 8px 10px;
-                    background: #808080;
-                    border-radius: 3px;
-                    color: #fff;
-                    cursor: pointer;
-                    .transi;
-                    &:hover {
-                        background: @text-hover;
-                    }
-                }
-            }
+        .el-form-item__label {
+            white-space: nowrap;
+            font-size: 0.7rem;
+            line-height: 1.35rem;
+            padding-right: 0.65rem;
+        }
+        .el-form-item {
+            margin-bottom: 0.75rem;
         }
     }
 }
